--- a/Assignment/Writing Assignment 1/选题.md
+++ b/Assignment/Writing Assignment 1/选题.md
@@ -28,7 +28,9 @@ Forgive, love, respect,
 
 
 
+词语：体谅（TiLiang）sympathy, respect, forgive, love
 
+There is a word Tiliang (体谅) in China. The meaning of it is complex. Ti() means body in Chinese, here in this word it means transfer your soul to others' body and experience what he or she felt. Liang() means forgive others. In daily life, when you see something bad happends to someone, you'll feel sympathy to the person, and this is Tiliang; when you find that your teacher works day and night, you'll respect him, and this is Tiliang. When your friend who promised to return the money back to you forget that, and you forgive him because he's family is poor, and this is Tiliang. You mother makes dinner for you and you feel her love, this is Tiliang. 
 
 情景设计：
 
@@ -41,6 +43,32 @@ Forgive, love, respect,
 7. 你今天上班把工作搞砸了，老板训斥了你一顿。
    1. 回到家发现老婆又忘记了煮饭，你会 迁怒/
    2. 回到家老婆告诉你孩子考试又没及格
+
+All participants in the experiment read a short passage asking them to imagine being the passenger in a car when the driver of the vehicle causes an accident. Two components of this short passage varied according to experimental condition. One variable concerned the identity of the driver causing the accident: either one’s father, one’s taxi cab driver, or one’s supervisor at work. A second variable concerned the resulting consequences of the imaginary accident: either property damage to someone else’s car, bodily injury of a pedestrian, or vehicular manslaughter of a pedestrian. In all cases, the driver speeds away. Participants were drawn from both Chinese and Western populations, and were asked the same set of questions (in Chinese or English), which revolved around moral psychology. For example, they were asked “How ashamed would you feel if you turned in the driver to the civil authorities, and other people found out that you did so?” and “How morally wrong do you believe was the driver’s actions?” Answers to these and other questions were collected on a scale, meaning that participants were not forced into answering yes or no questions.
+
+---
+
+This experiment request all participants to finish an anonymous questionnaire by reading a short passage. 
+
+1. 朋友把你的新鞋子弄脏了
+
+The first paragraph simulates the daily scene between you and your friends. Yesterday is your birthday, and your parents sent you a new pair of basketball shoes, white Nike shoes. You were very excited and wear this pair of shoes to school. Your classmates said that your shoes are so cool and they want to by them. But in class, your Deskmate's pen ink is blocked. So he began to shake the pen. You did not pay attention at the beginning, but after a while, you felt you right feet was wet, so you bowed down, and found that one of your shoes was stained with black ink. What will you do? 
+
+2. 陌生人踩脏了你的鞋
+
+The first paragraph simulates the daily scene between you and a stranger. Yesterday is your birthday, and your parents sent you a new pair of basketball shoes, white Nike shoes. You were very excited and wear this pair of shoes to school. On the bus to school, you were thinking how envious will your friends be. Suddenly, the bus stopped and a stranger stepped on your shoes. You felt hurt and bowed done, and you found that your shoes are very dirty. What will you do? 
+
+3. 鞋弄脏了，回到家，看到网上有人在骂一个[白宫的女性](https://www.huxiu.com/article/260811.html)，说这个女人没有本事，靠和总统发生不正当关系上位，并且总统也因为这件事情被弹劾。
+
+You were disapointing today because you new nike shoes were stained. After arriving home, you opened your macbook and read news. You found that a woman was scolded by many netizens, so you searched this woman and you found many reports said that she was a scorpion and got a high-paying position by undue relationship with the president. What will you do? 
+
+分类：
+
+对亲人，因为血缘和长久的一起居住，你可能可以体谅对方。
+
+对身边的陌生人，你需要在意他人的看法，因此会收敛一点，装作翩翩君子。
+
+对网络那边的陌生人，你无须害怕被人指责，因为没人知道你是谁。
 
 
 
