--- a/Assignment/Writing Assignment 1/选题.md
+++ b/Assignment/Writing Assignment 1/选题.md
@@ -75,6 +75,7 @@ You were disapointing today because you new nike shoes were stained. After arriv
 预测以及解释原因
 
 1. 尽管中国人和美国人都更愿意原谅朋友的错误，但美国人更愿意骂人或者报复回去。中国人则更能包容他人。
+2. although participants in the United States and China should be more willing to forgive(more accurate, *tiliang*) their friends who annoyed them than straingers, participants in Chinas should be more willing to forgive others.
 
 ## 《[孟子 - Mengzi](https://ctext.org/mengzi/ens)》
 
