--- a/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
+++ b/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
@@ -1,3 +1,61 @@
 写一篇关于庄子，荀子和韩非子思想的文章。
 
 您的主题应该关注其工作的文化含义，例如参考规范，价值观和/或信仰。务必确定经验主张并明确定义论文中出现的任何术语。我建议你遵循一般的方法/程序作为较短的写作任务。
+
+Chapter Twenty-Three: Human Nature is Bad
+
+> Page284
+
+People’s nature is bad. Their goodness is a matter of deliberate effort. 
+
+crooked wood must await steaming and straightening on the shap-
+ing frame, and only then does it become straight. Blunt metal must await
+honing and grinding, and only then does it become sharp.
+
+> page285
+
+Mengzi says: When people engage in learning, this manifests the goodness of their nature. I say: This is not so. This is a case of not attaining knowledge of people’s nature and of not inspecting clearly the division between people’s nature and their deliberate efforts. In every case, the nature of a thing is the accomplishment of Heaven. It cannot be learned. It cannot be worked at. Ritual and the standards of righteousness are what the sage produces. They are things that people become capable of through learning, things that are achieved through working at them. Those things in people that cannot be learned and cannot be worked at are called their “nature.” Those things in people that they become capable of through learning and that they achieve through working at them are called their “deliberate efforts.” This is the di- vision between nature and deliberate effort.(Ivanhoe & Norden, 285)　孟子说：“人要求学习的，就是人性的善。”这是错误的！这是因为不曾懂得人性，不了解本性与后天人为之间的区别。本性，是天生的，是学习不来的，也不是后天人为的。礼义，是圣人制定的，通过学习人们就能得到，经过努力就能做到。不可能通过学习，也不可能是人为，而是先天自然生成的，这就是本性。可以通过学习获得，可以经过后天人为的努力实现的，就是人为。这就是本性与人为的差别。
+
+Mengzi says: People’s nature is good, but they all wind up losing their nature and original state (Ivanhoe & Norden, 286).
+
+ if men suddenly see a child about to fall into a well, they will without exception experience a feeling of alarm and distress... the feeling of commiseration is essential to man. 今人乍见孺子将入于井，皆有怵惕恻隐之心...无恻隐之心，非人也(Mengzi, Gong Sun Chou I)
+
+|      | 孟子                                                 | 荀子                                                         |
+| ---- | ---------------------------------------------------- | ------------------------------------------------------------ |
+| 不同 | - People’s nature is good<br />- 无恻隐之心，非人也” | 荀子将人性看做与生俱来的原始 质朴的、尚未进入社会的自然属性，认为: “生 之所以然者谓之性” |
+| 相同 |                                                      |                                                              |
+
+
+
+写作方法
+
+1. 开头写明观点，人之初性本善
+2. 孟子认为。。。
+3. 但是荀子。。。
+4. 两者都不全面。。。
+5. 一个实验例子。。。
+6. 由此可见人之初性本善
+
+
+
+## Reference
+
+> Ying-Fa, Y. . (2012). The comparison research between the theory of xunzi `s evil human natureand menciustheory of goodness. *Northern Forum*.
+>
+> Ivanhoe, P. J. , & Norden, B. W. V. . (2005). *Readings in classical Chinese philosophy*. *Readings in classical Chinese philosophy /*. Hackett Pub.
+>
+> Bloom, P. (2013). *Just babies: The origins of good and evil*. Broadway Books.
+>
+>
+>
+> Bloom, P. (2010). The moral life of babies. *New York Times Magazine*, *3*.
+>
+> ```
+>  These experiments suggest that babies have a general appreciation of good and bad behavior
+> ```
+>
+>
+>
+> Hanfeizi, Chinese Text project. 2018/11/5. https://ctext.org/hanfeizi/ens
+>
+> Mengzi, Chinese Text project. 2018/11/24. https://ctext.org/mengzi/ens
