--- a/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
+++ b/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
@@ -36,6 +36,38 @@ Mengzi says: People’s nature is good, but they all wind up losing their nature
 5. 一个实验例子。。。
 6. 由此可见人之初性本善
 
+## 草稿
+
+1. 孟子 “性善论” 与荀子 “性恶论” 表面上对立，其实可以兼容。二者对 “人性” 内涵的理 解是不一样的，荀子将人性视为与生俱来的原始质朴的自然属性，即对物质生活的欲求，而孟子的人性则 指人在亲人、他人遇到危难、横暴等事情时天生的心态，主要指精神心理的倾向性。二者都切实有据，言 之成理，但都有不合逻辑之处。性善论与性恶论实际相互补充，可整合为统一的理论。
+
+   Mengzi thinks that "human nature is good", while Xunzi thinks that "human nature is bad"(Ivanhoe & Norden, 284, 288). Mengzi says that "the feeling of commiseration is essential to man" and thinks human nature to be the sympathy towards the person who are in suffer (Mengzi, Gong Sun Chou I).  Xunzi disagrees with him and says this is not ture (Ivanhoe & Norden, 288). He insisted that Mengzi did not attain attain knowledge of human nature, nor did he clearly see the differences between human nature and their deliberate efforts. Both are well-founded and justified, but they all have illogicalities. 
+
+   Meng Xue, Mengzi's thought, came directly from *Zhongyong*, which is wrote by Confucius's grandson Zi Si, and later generations called his thought "Si Meng's study". While Xun Xue, the thought of Xunzi, is directly related to the study of Jing(经), and his thought was succeeded by Confucius through Zi Xia. The fundamental point of the difference between Meng Xue and Xun Xue is that their understanding of the core of Confucianism is different (Ying-Fa, 101). (然后下面写different)
+
+2. The academic community unanimously believes that "human nature is good" is the theoretical basis of Mencius's humanities system (Ying-Fa, 100). Mencius's theory believes that human nature is good, and "goodness" is born with it. To illustrate that "human nature is good" is true, Mencius gives a vivid example in *Gong Sun Chou*. Mengzi says that "if men suddenly see a child about to fall into a well, they will without exception experience a feeling of alarm and distress... the feeling of commiseration is essential to man (Mengzi, Gong Sun Chou I)." 
+
+3. Though Mengzi says that "human nature is good" and lots of confucian disciple agrees with him, Xunzi says "this is not so (Ivanhoe & Norden, 285)." Xunzi believes that the core of Confucius's wisdom is "ritual" and builds his own ideological system along the path of "ritual" guided by Confucius. Xunzi focused on the concept of “ritual” and advocated respecting rituals and enacting laws and regulations, and he thinks that it can transform the bad nature to good character and making people's actions conform to laws, ethics and ritual.
+
+   This is a case of not attaining knowledge of people’s nature and of not inspecting clearly the division between people’s nature and their deliberate efforts. In every case, the nature of a thing is the accomplishment of Heaven. It cannot be learned. It cannot be worked at.  (Ivanhoe & Norden, 285).
+
+   As for the way that the eyes like pretty colors, the ears like beautiful sounds, the mouth likes good flavors, the heart likes what is beneficial, and the bones and flesh like what is comfortable—these are produced from people’s inborn dispositions and nature (Ivanhoe & Norden, 286). 
+
+   To further prove that human nature is bad, Xunzi makes a hypothesis.
+
+   Now suppose one were to try doing away with the power of rulers and superiors, try doing without the transformation from ritual and the stan- dards of righteousness, try doing away with the order of laws and standards, try doing without the restraint of punishments and fines. Then stand aside and observe how all the people of the world would treat each other. If it were like this, then the strong would harm the weak and take from them. The many would tyrannize the few and shout them down. One would not have to wait even a moment for all under Heaven to arrive at unruliness and chaos and perish. Looking at it in this way, it is clear that people’s na- ture is bad, and that their goodness is a matter of deliberate effort (Ivanhoe & Norden, 288).
+
+4. 
+
+
+
+
+
+5. 例子
+
+In one of our first studies of moral evaluation, we decided not to use two-dimensional animated movies but rather a three-dimensional display in which real geometrical objects, manipulated like puppets, acted out the helping/hindering situations: a yellow square would help the circle up the hill; a red triangle would push it down. After showing the babies the scene, the experimenter placed the helper and the hinderer on a tray and brought them to the child. In this instance, we opted to record not the babies’ looking time but rather which character they reached for, on the theory that what a baby reaches for is a reliable indicator of what a baby wants. In the end, we found that 6- and 10-month-old infants overwhelmingly preferred the helpful individual to the hindering individual. This wasn’t a subtle statistical trend; just about all the babies reached for the good guy.在我们最初的道德评价研究之一中，我们决定不使用二维动画电影，而是使用三维显示，其中真实的几何物体，像木偶一样操纵，表现出帮助/阻碍的情况：黄色正方形将有助于山上的圆圈; 一个红色的三角形将它推倒。 在向现场展示婴儿后，实验者将帮助者和阻碍器放在托盘上并将它们带到孩子身上。 在这种情况下，我们选择不记录婴儿的观察时间，而是记录他们所达到的特征，理论上婴儿的目标是婴儿想要的可靠指标。最后，我们发现6个月和10个月大的婴儿绝大多数偏爱有帮助的个体来阻碍个体。 这不是一个微妙的统计趋势; 几乎所有婴儿都为这个好人伸出手。
+
+identifying the helper as nice and the hinderer as mean. 这不是心本善吗？
+
 
 
 ## Reference
