--- a/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
+++ b/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
@@ -46,7 +46,9 @@ Mengzi says: People’s nature is good, but they all wind up losing their nature
 
 2. The academic community unanimously believes that "human nature is good" is the theoretical basis of Mencius's humanities system (Ying-Fa, 100). Mencius's theory believes that human nature is good, and "goodness" is born with it. To illustrate that "human nature is good" is true, Mencius gives a vivid example in *Gong Sun Chou*. Mengzi says that "if men suddenly see a child about to fall into a well, they will without exception experience a feeling of alarm and distress... the feeling of commiseration is essential to man (Mengzi, Gong Sun Chou I)." 
 
-3. Though Mengzi says that "human nature is good" and lots of confucian disciple agrees with him, Xunzi says "this is not so (Ivanhoe & Norden, 285)." Xunzi believes that the core of Confucius's wisdom is "ritual" and builds his own ideological system along the path of "ritual" guided by Confucius. Xunzi focused on the concept of “ritual” and advocated respecting rituals and enacting laws and regulations, and he thinks that it can transform the bad nature to good character and making people's actions conform to laws, ethics and ritual.
+   Mencius believes that this core is “benevolence” and builds its own ideological system along the path of “benevolence” guided by Confucius. After Confucius's concept of "benevolence", Mencius focused on the concept of "righteousness" and advocated the implementation of "benevolence". His political activities throughout his life were to persuade the monarchs at that time to be benevolent to the people and implement the politics of "benevolence." (Ying-Fa, 101)
+
+3. Though Mengzi says that "human nature is good" and lots of confucian disciple agrees with him, Xunzi says "this is not so (Ivanhoe & Norden, 285)." Xunzi believes that the core of Confucius's wisdom is "ritual" and builds his own ideological system along the path of "ritual" guided by Confucius. Xunzi focused on the concept of “ritual” and advocated respecting rituals and enacting laws and regulations, and he thinks that it can transform the bad nature to good character and making people's actions conform to laws, ethics and ritual (Ying-Fa, 101).
 
    This is a case of not attaining knowledge of people’s nature and of not inspecting clearly the division between people’s nature and their deliberate efforts. In every case, the nature of a thing is the accomplishment of Heaven. It cannot be learned. It cannot be worked at.  (Ivanhoe & Norden, 285).
 
@@ -56,7 +58,7 @@ Mengzi says: People’s nature is good, but they all wind up losing their nature
 
    Now suppose one were to try doing away with the power of rulers and superiors, try doing without the transformation from ritual and the stan- dards of righteousness, try doing away with the order of laws and standards, try doing without the restraint of punishments and fines. Then stand aside and observe how all the people of the world would treat each other. If it were like this, then the strong would harm the weak and take from them. The many would tyrannize the few and shout them down. One would not have to wait even a moment for all under Heaven to arrive at unruliness and chaos and perish. Looking at it in this way, it is clear that people’s na- ture is bad, and that their goodness is a matter of deliberate effort (Ivanhoe & Norden, 288).
 
-4. 
+4. By studying their thoughts, It can be find that both of their theories are not perfect.
 
 
 
