--- a/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
+++ b/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
@@ -44,9 +44,9 @@ Mengzi says: People’s nature is good, but they all wind up losing their nature
 
    Meng Xue, Mengzi's thought, came directly from *Zhongyong*, which is wrote by Confucius's grandson Zi Si, and later generations called his thought "Si Meng's study". While Xun Xue, the thought of Xunzi, is directly related to the study of Jing(经), and his thought was succeeded by Confucius through Zi Xia. The fundamental point of the difference between Meng Xue and Xun Xue is that their understanding of the core of Confucianism is different (Ying-Fa, 101). (然后下面写different)
 
-2. The academic community unanimously believes that "human nature is good" is the theoretical basis of Mencius's humanities system (Ying-Fa, 100). Mencius's theory believes that human nature is good, and "goodness" is born with it. To illustrate that "human nature is good" is true, Mencius gives a vivid example in *Gong Sun Chou*. Mengzi says that "if men suddenly see a child about to fall into a well, they will without exception experience a feeling of alarm and distress... the feeling of commiseration is essential to man (Mengzi, Gong Sun Chou I)." 
+2. The academic community unanimously believes that "human nature is good" is the theoretical basis of Mengzi's humanities system (Ying-Fa, 100). Mengzi's theory believes that human nature is good, and "goodness" is born with it. To illustrate that "human nature is good" is true, Mengzi gives a vivid example in *Gong Sun Chou*. Mengzi says that "if men suddenly see a child about to fall into a well, they will without exception experience a feeling of alarm and distress... the feeling of commiseration is essential to man (Mengzi, Gong Sun Chou I)." 
 
-   Mencius believes that this core is “benevolence” and builds its own ideological system along the path of “benevolence” guided by Confucius. After Confucius's concept of "benevolence", Mencius focused on the concept of "righteousness" and advocated the implementation of "benevolence". His political activities throughout his life were to persuade the monarchs at that time to be benevolent to the people and implement the politics of "benevolence." (Ying-Fa, 101)
+   Mengzi believes that this core is “benevolence” and builds its own ideological system along the path of “benevolence” guided by Confucius. After Confucius's concept of "benevolence", Mengzi focused on the concept of "righteousness" and advocated the implementation of "benevolence". His political activities throughout his life were to persuade the monarchs at that time to be benevolent to the people and implement the politics of "benevolence." (Ying-Fa, 101)
 
 3. Though Mengzi says that "human nature is good" and lots of confucian disciple agrees with him, Xunzi says "this is not so (Ivanhoe & Norden, 285)." Xunzi believes that the core of Confucius's wisdom is "ritual" and builds his own ideological system along the path of "ritual" guided by Confucius. Xunzi focused on the concept of “ritual” and advocated respecting rituals and enacting laws and regulations, and he thinks that it can transform the bad nature to good character and making people's actions conform to laws, ethics and ritual (Ying-Fa, 101).
 
@@ -60,7 +60,7 @@ Mengzi says: People’s nature is good, but they all wind up losing their nature
 
 4. By studying their thoughts, It can be find that both of their theories are not perfect.
 
-   Mencius believes that human nature is good, then where does evil come from? Although he pointed out that the insufficiency expression of good nature can lead to "badness", there is no direct explanation of where evil comes from. “not good” includes “bad”, but it also contains neutral “not good and not bad”, while “bad” and “not good and not bad” are not equal. For example, robbery is bad, and prevention of robbery is good, but neither participates or helps robbery, nor prevents it from coming forward is neither good nor bad. If human nature is good, then why do people make steals, robberies, murders, etc.? Mengzi says that this is because the nature of goodness cannot be fully exerted, and it is unreasonable.
+   Mengzi believes that human nature is good, then where does evil come from? Although he pointed out that the insufficiency expression of good nature can lead to "badness", there is no direct explanation of where evil comes from. “not good” includes “bad”, but it also contains neutral “not good and not bad”, while “bad” and “not good and not bad” are not equal. For example, robbery is bad, and prevention of robbery is good, but neither participates or helps robbery, nor prevents it from coming forward is neither good nor bad. If human nature is good, then why do people make steals, robberies, murders, etc.? Mengzi says that this is because the nature of goodness cannot be fully exerted, and it is unreasonable.
 
    Similarly, Xunzi's "human nature is bad" also has a theoretical blind spot, and its interpretation of the source of good cannot be justified. Since human nature is bad, then how can it form good? The famous proposition is that the good is not born to be good, but is influenced by the environment, self-cultivation and learning (Xunzi, Human Nature is Bad). Some saints formulate moral and ritual and they are good, then where do the goodness of the saints come from? Is it born to be good? If so, then there is no different to Mengzi's "human nature is good." If not, then, who did the saint learn to be good before he became a saint? Is it a former saint? This will be endless, and there will be no solution at all.
 
@@ -68,36 +68,27 @@ Mengzi says: People’s nature is good, but they all wind up losing their nature
 
 5. 例子
 
-To explore the nature of babies, Karen Wynn and Kiley Hamlin did an interesting experiment. This experiment uses a three-dimensional display with wood-made geometric objects, and these objects were manipulated like puppets. This experiment acted out the helping and hindering situations. a yellow square would help the circle up the hill; a red triangle would push it down. After showing the babies this scene, the experimenter took out the helper and the hinderer and brought them to the baby. What they do is to record which character they reached for, on the theory that what a baby reaches for is a reliable indicator of what a baby wants (Bloom, 4). In the end, they found that babies overwhelmingly preferred the helpful individual to the hindering individual (Bloom, 10). Baby can identifying the helper as nice and the hinderer as mean. This proves that human nature is on the side of goodness.
+   To explore the nature of babies, Karen Wynn and Kiley Hamlin did an interesting experiment. This experiment uses a three-dimensional display with wood-made geometric objects, and these objects were manipulated like puppets. This experiment acted out the helping and hindering situations. a yellow square would help the circle up the hill; a red triangle would push it down. After showing the babies this scene, the experimenter took out the helper and the hinderer and brought them to the baby. What they do is to record which character they reached for, on the theory that what a baby reaches for is a reliable indicator of what a baby wants (Bloom, 4). In the end, they found that babies overwhelmingly preferred the helpful individual to the hindering individual (Bloom, 10). Baby can identifying the helper as nice and the hinderer as mean. This proves that human nature is on the side of goodness.
 
-在我们最初的道德评价研究之一中，我们决定不使用二维动画电影，而是使用三维显示，其中真实的几何物体，像木偶一样操纵，表现出帮助/阻碍的情况：黄色正方形将有助于山上的圆圈; 一个红色的三角形将它推倒。 在向现场展示婴儿后，实验者将帮助者和阻碍器放在托盘上并将它们带到孩子身上。 在这种情况下，我们选择不记录婴儿的观察时间，而是记录他们所达到的特征，理论上婴儿的目标是婴儿想要的可靠指标。最后，我们发现6个月和10个月大的婴儿绝大多数偏爱有帮助的个体来阻碍个体。 这不是一个微妙的统计趋势; 几乎所有婴儿都为这个好人伸出手。
+   在我们最初的道德评价研究之一中，我们决定不使用二维动画电影，而是使用三维显示，其中真实的几何物体，像木偶一样操纵，表现出帮助/阻碍的情况：黄色正方形将有助于山上的圆圈; 一个红色的三角形将它推倒。 在向现场展示婴儿后，实验者将帮助者和阻碍器放在托盘上并将它们带到孩子身上。 在这种情况下，我们选择不记录婴儿的观察时间，而是记录他们所达到的特征，理论上婴儿的目标是婴儿想要的可靠指标。最后，我们发现6个月和10个月大的婴儿绝大多数偏爱有帮助的个体来阻碍个体。 这不是一个微妙的统计趋势; 几乎所有婴儿都为这个好人伸出手。
 
-To explore the nature of babies, Karen Wynn and Kiley Hamlin did an interesting experiment. This experiment uses a three-dimensional display in which real geometric objects, manipulated like puppets, exhibit help/obstruction: a yellow square will help the circle on the mountain; a red triangle will push it down. After presenting the baby to the scene, the experimenter placed the helper and the obstruction on the tray and brought them to the child. In this case, we choose not to record the baby's observation time, but to record the characteristics they have achieved. In theory, the baby's goal is a reliable indicator that the baby wants. Finally, we found that the majority of babies at 6 months and 10 months old favored helpful individuals to block individuals. This is not a subtle statistical trend; almost all babies reach out for this good guy.
-
-identifying the helper as nice and the hinderer as mean. 这不是心本善吗？
+6. The issue of human nature is a big problem in the history of Chinese thought, and it was also an important issue in Confucianism. However, Confucius, the founder of the Confucian doctrine, has little to say about this issue, so it is not surprising that this can lead to endless debates. Regardless of how the descendants think or argue about the thoughts of the Mengzi and Xunzi, Mengzi's thoughts prevail. This is because Mengzi's thoughts are more in line with the ideology of the majority and more suitable for the needs of the ruling class.
 
 
 
 ## Reference
 
-> Ying-Fa, Y. . (2012). The comparison research between the theory of xunzi `s evil human natureand menciustheory of goodness. *Northern Forum*.
 >
-> Ivanhoe, P. J. , & Norden, B. W. V. . (2005). *Readings in classical Chinese philosophy*. *Readings in classical Chinese philosophy /*. Hackett Pub.
+>
+>
 >
 > Bloom, P. (2013). *Just babies: The origins of good and evil*. Broadway Books.
 >
->
->
-> Bloom, P. (2010). The moral life of babies. *New York Times Magazine*, *3*.
->
-> ```
->  These experiments suggest that babies have a general appreciation of good and bad behavior
-> ```
->
->
->
-> Hanfeizi, Chinese Text project. 2018/11/5. https://ctext.org/hanfeizi/ens
->
-> Mengzi, Chinese Text project. 2018/11/24. https://ctext.org/mengzi/ens
+> Ivanhoe, P. J. , & Norden, B. W. V. . (2005). *Readings in classical Chinese philosophy*. *Readings in classical Chinese philosophy /*. Hackett Pub.
 >
 > Xunzi, Chinese Text project. 2018/11/24. https://ctext.org/xunzi/ens
+>
+> Ying-Fa, Y. . (2012). The comparison research between the theory of xunzi `s evil human natureand Mengzitheory of goodness. *Northern Forum*.
+
+
+
