--- a/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
+++ b/Assignment/Writing Assignment 3/庄子，荀子和韩非子思想.md
@@ -44,6 +44,8 @@ Mengzi says: People’s nature is good, but they all wind up losing their nature
 
    Meng Xue, Mengzi's thought, came directly from *Zhongyong*, which is wrote by Confucius's grandson Zi Si, and later generations called his thought "Si Meng's study". While Xun Xue, the thought of Xunzi, is directly related to the study of Jing(经), and his thought was succeeded by Confucius through Zi Xia. The fundamental point of the difference between Meng Xue and Xun Xue is that their understanding of the core of Confucianism is different (Ying-Fa, 101). (然后下面写different)
 
+   The origin of the thoughts of Xunzi and Mengzi is an important issue in the academic history of China. Sima Qian pointed out that both Xunzi and Mengzi studied Confucius's thoughts and explained Confucius' thoughts according to their own views and their thoughts became the two most famous disciplines at the time (Ying-Fa, 101). Moreover, the two theories have not only played an important role in the life of Xunzi and Mengzi, but also in the later academic history. The thinkers of each period explained Xunzi and Mengzi's theories according to their own understanding. The general trend is that the influence of Mengzi's theory is far more profound (102). Although “good” and “evil” will never merge, they all point to moral discussion and questioning.
+
 2. The academic community unanimously believes that "human nature is good" is the theoretical basis of Mengzi's humanities system (Ying-Fa, 100). Mengzi's theory believes that human nature is good, and "goodness" is born with it. To illustrate that "human nature is good" is true, Mengzi gives a vivid example in *Gong Sun Chou*. Mengzi says that "if men suddenly see a child about to fall into a well, they will without exception experience a feeling of alarm and distress... the feeling of commiseration is essential to man (Mengzi, Gong Sun Chou I)." 
 
    Mengzi believes that this core is “benevolence” and builds its own ideological system along the path of “benevolence” guided by Confucius. After Confucius's concept of "benevolence", Mengzi focused on the concept of "righteousness" and advocated the implementation of "benevolence". His political activities throughout his life were to persuade the monarchs at that time to be benevolent to the people and implement the politics of "benevolence." (Ying-Fa, 101)
